special css/js location
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -282,6 +282,10 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/utils/tempo.js?v={{version}}"></script>
 <script type="text/javascript" src="js/utils/plugins.js?v={{version}}"></script>
 
+<!-- live-usb special handling -->
+<link rel="stylesheet" type="text/css" href="mod-ui.css?v={{version}}"/>
+<script type="text/javascript" src="mod-ui.js?v={{version}}"></script>
+
 </head>
 <!-- END HEAD -->
 
