Import the perhaps useful stuff from cloud-webrtc branch
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -281,6 +281,7 @@ $('document').ready(function() {
 <script type="text/javascript" src="js/nprogress.js?v={{version}}"></script>
 <script type="text/javascript" src="js/utils/tempo.js?v={{version}}"></script>
 <script type="text/javascript" src="js/utils/plugins.js?v={{version}}"></script>
+<script type="text/javascript" src="js/online.js?v={{version}}"></script>
 
 <!-- live-usb special handling -->
 <link rel="stylesheet" type="text/css" href="mod-ui.css?v={{version}}"/>
