Fix for previous commit

--- a/html/index.html
+++ b/html/index.html
@@ -488,7 +488,7 @@ $('document').ready(function() {
                     <button class="js-cv-addressing" id="js-cv-addressing-toggle">Manage CV Ports</button>
                     <div id="js-preset-menu" style="display:inline-block;">
                         <button class="js-preset menu-trigger">Snapshots</button>
-                        <ul class="drop-menu clearfix js-pedalboard-presets-menu" style="cursor:pointer;">
+                        <ul class="drop-menu clearfix js-pedalboard-presets-menu" style="cursor:pointer;text-align:left;">
                             <li class="js-preset-save">Save</li>
                             <li class="js-preset-save-as">Save as</li>
                             <!--
