push current status of tests
Signed-off-by: falkTX <falktx@falktx.com>

--- a/html/index.html
+++ b/html/index.html
@@ -507,12 +507,11 @@ $('document').ready(function() {
             </div>
             <!-- END PEDALBOARD-SETTINGS -->
 
-            <!-- ZOOM CONTROLLERS -->
-            <div id="zoom-controllers">
-                <span class="zoom-out"></span>
-                <span class="zoom-in"></span>
+            <!-- USER PROFILE -->
+            <div id="user-profile">
+                <span class="user-profile-icon"></span>
             </div>
-            <!-- END ZOOM CONTROLLERS -->
+            <!-- END USER PROFILE -->
 
         </header>
         <!-- END PEDALBOARD-ACTIONS -->
@@ -974,7 +973,22 @@ $('document').ready(function() {
             </div>
         </div>
     </div>
-    <!-- TRANSPORT BOX -->
+    <!-- END TRANSPORT BOX -->
+
+    <!-- USER PROFILE BOX -->
+    <div id="mod-user-profile-window" class="mod-pedal-settings">
+        <div class="mod-controls clearfix">
+            <h1>Claim your licenses</h1>
+            <span>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</span>
+            <p class="textright">
+                <button class="js-close btn btn-danger">Cancel</button>
+                <button class="js-upgrade btn btn-info">Claim</button>
+            </p>
+<!--             <button class="js-cancel-saving btn btn-danger">Cancel</button> -->
+<!--             <button class="js-save btn btn-success">Claim</button> -->
+        </div>
+    </div>
+    <!-- END USER PROFILE -->
 
 <!-- END WRAPPER -->
 </div>
