--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -68,7 +68,7 @@
             <div class="mod-string">
                 <span class="mod-string-title">{{label}}</span>
                 <div class="mod-string-content" mod-role="input-parameter" mod-parameter-uri="{{uri}}" mod-widget="string">
-                    <textarea autocomplete=off spellcheck=false class="mod-string-value" mod-role="input-parameter-value" mod-parameter-uri="{{uri}}"></span>
+                    <textarea autocomplete=off spellcheck=false class="mod-string-value" mod-role="input-parameter-value" mod-parameter-uri="{{uri}}"></textarea>
                 </div>
             </div>
             {{/string}}
